--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../src/style.css">
-  <title>Pokemons!</title>
+  <title>召唤你的Pokemon!</title>
 </head>
 <body>
   <div class="box"></div>
-  <button type="button" name="button" class="button">就决定是你了!</button>
-  <script src="build.js" charset="utf-8"></script>
+  <button class="button">就决定是你了!</button>
+  <script src="./dist/build.js" charset="utf-8"></script>
 </body>
 </html>
