--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="box"></div>
-  <button class="button">就决定是你了!</button>
+  <button class="btn" id="invoke">就决定是你了!</button>
   <script src="./dist/build.js" charset="utf-8"></script>
 </body>
 </html>
